--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ seaborn==0.13.2
 scikit-learn==1.6.1
 tensorflow==2.18.0
 joblib==1.4.2
+plotly==5.13.0
+# Dependencies for data visualization and analysis
 
 # Additional dependencies for the Streamlit app and testing
 streamlit>=1.16.0
