--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ scikit-learn==1.6.1
 tensorflow==2.18.0
 joblib==1.4.2
 plotly==5.13.0
+fpdf==1.7.2
 # Dependencies for data visualization and analysis
 
 # Additional dependencies for the Streamlit app and testing
