Add secrets.toml to .gitignore: Prevent versioning of sensitive configuration files to enhance security and maintain best practices in project management.

--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,7 @@ Thumbs.db
 
 # Streamlit cache and settings
 .streamlit/
+secrets.toml
 
 # Data files (if you prefer not to version large datasets)
 data/
