--- a/frontend/streamlit/pyproject.toml
+++ b/frontend/streamlit/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "dotenv>=0.9.9",
     "fpdf==1.7.2",
     "joblib==1.4.2",
     "matplotlib==3.10.0",
