--- a/backend/api/CI_RP/pyproject.toml
+++ b/backend/api/CI_RP/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "fastapi>=0.115.12",
     "joblib>=1.5.0",
+    "load-dotenv>=0.1.0",
     "numpy>=2.0.2",
     "pandas>=2.2.3",
     "requests>=2.32.3",
