feat: copy .env file to Docker image for environment variable access

--- a/backend/api/CI_RP/Dockerfile
+++ b/backend/api/CI_RP/Dockerfile
@@ -11,6 +11,7 @@ COPY --from=builder /root/.local /root/.local
 ENV PATH=/root/.local/bin:$PATH
 COPY app ./app
 COPY models ./models
+COPY .env .
 
 # Tell Docker (and readers) that the container listens on 8080
 EXPOSE 8080
